# QtCustom

./: CMakeLists.txt  QtCognize.md  batterywgt.cpp  batterywgt.h  build.sh  compile_commands.json  demonstrate.h  main.cpp  mainwindow.cpp  resources.qrc  style.qss  tool.cpp  tool.h  untitled.pro
batterywgt/: demonstrate.cpp
common/: CMakeLists.txt  ccapplication.cpp  ccapplication.h  tool.cpp  tool.h
controls/aspectratiolayout/: aspectratiolayout.cpp  aspectratiolayout.h  main.cpp
controls/aspectratiowidget/: CMakeLists.txt  aspectratiowidget.cpp  aspectratiowidget.h  main.cpp
controls/batterywgt/: batterywgt.cpp  batterywgt.h  main.cpp  style.qss
controls/compareresizewgt/: CMakeLists.txt  heightforwidthwidget.h  main.cpp  resizeeventwidget.cpp  resizeeventwidget.h
controls/customscrollbar/: CMakeLists.txt  customscrollbar.cpp  main.cpp  style.qss
controls/testlayout/: CMakeLists.txt  style.qss
customscrollbar/: customscrollbar.cpp  customscrollbar.h  demonstrate.cpp
demo/: all_output.txt
demo/aspectratiolayout/: CMakeLists.txt  aspectratiolayout.h
demo/aspectratiowidget/: CMakeLists.txt  aspectratiowidget.cpp  style.qss
demo/batterycellwgt/: CMakeLists.txt  batterycellwidget.cpp  batterycellwidget.h  main.cpp
demo/batterymodulewidget/: CMakeLists.txt  batterymodulewidget.cpp  batterymodulewidget.h  main.cpp  main1.cpp
demo/batterywgt/: CMakeLists.txt  batterywgt.cpp  main.cpp  style.qss
demo/betterypackwidget/: CMakeLists.txt  batterypackwidget.cpp  batterypackwidget.h  main.cpp  style.qss
demo/bmscellvoltagewgt/: CMakeLists.txt  bmscellvoltagewgt.cpp  bmscellvoltagewgt.h  main.cpp
demo/bmstemperatureprobewgt/: CMakeLists.txt  absbmsstruct.h  bmstemperatureprobewgt.cpp  bmstemperatureprobewgt.h  main.cpp
demo/cardframe/: CMakeLists.txt  cardframe.cpp  cardframe.h  main.cpp
demo/compareresizewgt/: heightforwidthwidget.cpp
demo/customscrollbar/: CMakeLists.txt  customscrollbar.h  style.qss
demo/customtablewidget/: CMakeLists.txt  customtablewidget.cpp  customtablewidget.h  main.cpp  style.qss
demo/dynamicLayout/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
demo/dynamicui/: CMakeLists.txt  main.cpp  mainwindow.ui
demo/flowlayout/: CMakeLists.txt  flowlayout.cpp  flowlayout.h  window.cpp
demo/gunboxwgt/: CMakeLists.txt  gunboxcomponent.h  gunboxwgt.cpp  gunboxwgt.h  main.cpp  style.qss
demo/iconlabel/: CMakeLists.txt  iconlabel.cpp  iconlabel.h  main.cpp  style.qss
demo/levitatewidget/: CMakeLists.txt  gunidbadge.cpp  gunidbadge.h  mainwindow.cpp  mainwindow.h
demo/qsidetabwidget/: CMakeLists.txt  main.cpp  qsidetabwidget.cpp  qsidetabwidget.h
demo/svgframe/: CMakeLists.txt  main.cpp  svgframe.cpp  svgframe.h
demo/temperaturemodulewidget/: CMakeLists.txt  main.cpp  temperaturemodulewidget.cpp  temperaturemodulewidget.h
demo/temperatureprobewidget/: CMakeLists.txt  main.cpp  temperatureprobewidget.cpp  temperatureprobewidget.h
demo/templatesvg/: CMakeLists.txt  main.cpp  style.qss  templatesvgrenderer.cpp  templatesvgrenderer.h  templatesvgwidget.cpp  templatesvgwidget.h
demo/testlayout/: main.cpp
demo/themesvg/: CMakeLists.txt  main.cpp  style copy.qss  style.qss  themedsvgrenderer.cpp  themedsvgrenderer.h  themesvgwgt.cpp  themesvgwgt.h
demo/verticalinfowidget/: CMakeLists.txt  justifylabelstyle.h  main.cpp  style.qss  verticalinfowidget.cpp  verticalinfowidget.h  verticalinfowidget.ui
demo/verticaltab/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
res/: resources.qrc
